Fixed row spacing on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,6 @@ a, a:hover, a:visited, a:active, a:focus {
   text-decoration: none;
 }
 
-.row {
-  margin-top: 20px;
-}
-
 /*
  * Settings for the top navigation bar
  */
@@ -241,9 +237,9 @@ a, a:hover, a:visited, a:active, a:focus {
 }
 
 /*
- * Custom spacing for the technology and people pages
+ * Custom spacing for two-column pages
  */
-#technology > .row, #people > .row {
+.col-sm-6 {
   margin-top: 50px;
 }
 @media (max-width: 767px) {
